--- a/style.css
+++ b/style.css
@@ -1,3 +1,128 @@
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  background-color: #173753;
+  color: #32a6ff;
+}
+
+header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 30px 0;
+  padding-top: 50px;
+}
+
+h1 {
+  font-family: "Playfair Display", serif;
+  margin-bottom: 20px;
+}
+
+h2 {
+  padding: 10px;
+  font-family: "Poppins", sans-serif;
+  font-weight: bold;
+}
+
+h3 {
+  font-family: "Poppins", sans-serif;
+  font-weight: 300;
+}
+
+input {
+  background-color: #ae3b12;
+  color: #091621;
+  margin: 10px auto;
+}
+
+::placeholder {
+  color: #091621;
+  opacity: 1;
+}
+
+button {
+  color: #173753;
+  background-color: #32a6ff;
+  border-color: #173753;
+}
+
+button:hover {
+  background-color: #ae3b12;
+}
+
+.container {
+  width: 80%;
+  margin: 0 auto;
+}
+
+.bookBtn {
+  font-family: "Poppins", sans-serif;
+  font-size: 1rem;
+  padding: 6px 25px;
+  cursor: pointer;
+}
+
+#book-list {
+  width: 75%;
+  margin: 0 auto;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 20px;
+}
+
+.card {
+  padding: 16px 8px;
+  min-width: 250px;
+  border-radius: 4px;
+  box-shadow: 0.5px 0.5px 5px 0.5px #091621;
+  text-align: center;
+  background-color: #ae3b12;
+}
+
+.pages {
+  display: block;
+  padding: 5px 0;
+  font-family: "Poppins", sans-serif;
+  font-size: 0.9rem;
+}
+
+.label {
+  display: flex;
+  justify-content: center;
+  gap: 5px;
+  font-family: "Poppins", sans-serif;
+  font-size: 0.9rem;
+}
+
+.checkbox {
+  cursor: pointer;
+  background-color: #ae3b12;
+}
+
+.checkbox:checked {
+  background-color: #ae3b12;
+}
+
+.delBtn {
+  display: block;
+  margin: 15px auto;
+  padding: 5px 10px;
+  font-family: "Poppins", sans-serif;
+  font-size: 0.9rem;
+  cursor: pointer;
+  background-color: #173753;
+  color: #ae3b12;
+}
+
+.delBtn:hover {
+  background-color: #32a6ff;
+}
+
 .modal {
   display: none;
   position: fixed;
@@ -11,10 +136,11 @@
 }
 .modal-content {
   position: relative;
-  background-color: white;
+  background-color: #173753;
   padding: 20px;
   margin: auto;
-  width: 75%;
+  top: 30%;
+  width: 50%;
   -webkit-animation-name: animatetop;
   -webkit-animation-duration: 0.4s;
   animation-name: animatetop;
@@ -22,12 +148,13 @@
 }
 .close-btn {
   float: right;
-  color: lightgray;
+  color: #ae3b12;
   font-size: 24px;
   font-weight: bold;
+  cursor: pointer;
 }
 .close-btn:hover {
-  color: darkgray;
+  color: #32a6ff;
 }
 @-webkit-keyframes animatetop {
   from {
